--- a/data_mining_final.ipynb
+++ b/data_mining_final.ipynb
@@ -40,6 +40,54 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "Sy4zgfZm0DuM"
+      },
+      "source": [
+        "Noah Ferrel\n",
+        "\n",
+        "*   Data cleaning\n",
+        "*   Some visualization\n",
+        "*   Tested different approaches to build the final model\n",
+        "*   Researched NLP best practices\n",
+        "*   Helped write final paper\n",
+        "*   Formatted paper in latex\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6uF-V_5_32eb"
+      },
+      "source": [
+        "Raha Pirzadeh\n",
+        "\n",
+        "\n",
+        "*   Data cleaning\n",
+        "*   Visulizations\n",
+        "*   Words2Vec analysis\n",
+        "*   Final paper and presentation\n",
+        "\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0KEgIiygLHBA"
+      },
+      "source": [
+        "Michael Kulinich\n",
+        "- Data Cleaning and preprocessing \n",
+        "- Genre Prediction section\n",
+        "- Built final model\n",
+        "- Final paper and presentation\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "lj9ex-dEfU2y"
       },
       "source": [
@@ -3803,41 +3851,19 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "aKMNb8nem03b"
-      },
-      "source": [
-        "## Condense Categories"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "4jXUI7_znM53"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "mAqTIWgknNAg"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "9GdpsH09yjYy"
       },
       "source": [
         "# Merge Netflix with IMDB"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "J9mOqNQI4jJG"
+      },
+      "source": [
+        "This section was not used because we would have lost half of the data when merging the two datasets\n"
       ]
     },
     {
@@ -4200,122 +4226,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "h_feQDRn4UW4"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 202
-        },
-        "id": "aFxjyKNc8WwN",
-        "outputId": "cdc4aff0-c4be-474c-ff1a-4cd410790b02"
-      },
-      "source": [
-        "IMDB_movies[IMDB_movies.original_title == 'Ghost of Zorro']"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>imdb_title_id</th>\n",
-              "      <th>title</th>\n",
-              "      <th>original_title</th>\n",
-              "      <th>year</th>\n",
-              "      <th>date_published</th>\n",
-              "      <th>genre</th>\n",
-              "      <th>duration</th>\n",
-              "      <th>country</th>\n",
-              "      <th>language</th>\n",
-              "      <th>director</th>\n",
-              "      <th>writer</th>\n",
-              "      <th>production_company</th>\n",
-              "      <th>actors</th>\n",
-              "      <th>description</th>\n",
-              "      <th>avg_vote</th>\n",
-              "      <th>votes</th>\n",
-              "      <th>budget</th>\n",
-              "      <th>usa_gross_income</th>\n",
-              "      <th>worlwide_gross_income</th>\n",
-              "      <th>metascore</th>\n",
-              "      <th>reviews_from_users</th>\n",
-              "      <th>reviews_from_critics</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>6166</th>\n",
-              "      <td>tt0041413</td>\n",
-              "      <td>Il doppio segno di Zorro</td>\n",
-              "      <td>Ghost of Zorro</td>\n",
-              "      <td>1949</td>\n",
-              "      <td>1952</td>\n",
-              "      <td>Action, Adventure, Crime</td>\n",
-              "      <td>167</td>\n",
-              "      <td>USA</td>\n",
-              "      <td>English</td>\n",
-              "      <td>Fred C. Brannon</td>\n",
-              "      <td>Royal K. Cole, William Lively</td>\n",
-              "      <td>Republic Pictures (I)</td>\n",
-              "      <td>Clayton Moore, Pamela Blake, Roy Barcroft, Geo...</td>\n",
-              "      <td>It is 1865 and the telegraph is heading west. ...</td>\n",
-              "      <td>6.3</td>\n",
-              "      <td>116</td>\n",
-              "      <td>$ 164895</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>4.0</td>\n",
-              "      <td>1.0</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "     imdb_title_id  ... reviews_from_critics\n",
-              "6166     tt0041413  ...                  1.0\n",
-              "\n",
-              "[1 rows x 22 columns]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 108
-        }
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "iGVWemA058yJ"
@@ -4661,7 +4571,8 @@
       },
       "source": [
         "### README\n",
-        "For this portion of the notebook, you need to upload the glove word embeddings. This can take a couple of minutes. Also training the model will take some time as well"
+        "For this portion of the notebook, you need to upload the glove word embeddings. This can take a couple of minutes. Also training the model will take some time as well\n",
+        "- In order to use the GloVe word embeddings, download the 'glove.6B.zip' file from [here](https://nlp.stanford.edu/projects/glove/) then extract it and upload the 'glove.6B.50d' file to the google collab at the begining of the Genre Prediction section.\n"
       ]
     },
     {
@@ -4687,7 +4598,7 @@
         "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
         "from sklearn.model_selection import train_test_split\n",
         "from tensorflow.keras.utils import to_categorical\n",
-        "from tensorflow.keras.layers import concatenate, Input, Dense, Flatten, SimpleRNN,GRU, Dropout, AveragePooling1D, MaxPooling1D, Conv1D, Embedding, LSTM, GlobalAveragePooling1D, GlobalMaxPooling1D, SpatialDropout1D, Bidirectional, BatchNormalization\n",
+        "from tensorflow.keras.layers import concatenate, Input, Dense, Flatten, Dropout, AveragePooling1D, MaxPooling1D, Conv1D, Embedding, LSTM, GlobalAveragePooling1D, GlobalMaxPooling1D, SpatialDropout1D, Bidirectional, BatchNormalization\n",
         "from tensorflow.keras.models import Model\n",
         "from tensorflow.keras.callbacks import ModelCheckpoint\n",
         "from numpy import array\n",
@@ -4721,13 +4632,13 @@
             }
           },
           "base_uri": "https://localhost:8080/",
-          "height": 73
+          "height": 56
         },
         "id": "sOP2QaD3qX08",
-        "outputId": "5f2e1135-0c41-46d3-ac6b-47580ac0af9c"
+        "outputId": "88c53470-4865-4300-848b-a27eef5a4836"
       },
       "source": [
-        "\n",
+        "# chose 'glove.6B.50d' from wherever you downloaded the 'glove.6B.zip'\n",
         "glove = files.upload()"
       ],
       "execution_count": null,
@@ -4737,9 +4648,9 @@
           "data": {
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-d17d80b2-e2e2-4c21-a16f-79171a2c263e\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-14db06a9-4a69-40e6-8de2-d7ddaf6bb875\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-d17d80b2-e2e2-4c21-a16f-79171a2c263e\">\n",
+              "     <output id=\"result-14db06a9-4a69-40e6-8de2-d7ddaf6bb875\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -4754,11 +4665,16 @@
           }
         },
         {
-          "output_type": "stream",
-          "text": [
-            "Saving glove.6B.50d.txt to glove.6B.50d.txt\n"
-          ],
-          "name": "stdout"
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 2
         }
       ]
     },
@@ -6331,7 +6247,7 @@
         "id": "uewh4t3avBKp"
       },
       "source": [
-        "The best threshold to use for classifying samples into genres will be about .35. Therefore we will use this threshold as our best model predictor"
+        "The best threshold to use for classifying samples into genres will be about .3. Therefore we will use this threshold as our best model predictor"
       ]
     },
     {
